Some cleanup after failing to add otlp tracing

--- a/test_api/Cargo.toml
+++ b/test_api/Cargo.toml
@@ -11,11 +11,24 @@ openai_dive = "0.2.13"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
-tower-http = { version = "0.4.4", features = ["cors", "trace", "compression-full", "sensitive-headers", "request-id", "propagate-header"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tower-http = { version = "0.4.4", features = [
+  "cors",
+  "trace",
+  "compression-full",
+  "sensitive-headers",
+  "request-id",
+  "propagate-header",
+] }
 diesel = { version = "2", features = ["chrono"] }
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 dotenvy = "0.15"
 bb8 = "0.8"
 chrono = "0.4.31"
+reqwest = { version = "0.11.22", features = [
+  "json",
+  "rustls-tls",
+  "trust-dns",
+  "gzip",
+], default-features = false }
+tracing = { version = "0.1.40" }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
