General dockerfile for rust apis

--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -5,6 +5,10 @@
 ARG RUST_VERSION
 FROM rust:${RUST_VERSION:-latest} AS base
 
+ARG SERVICE_NAME
+
+# check that SERVICE_NAME is set
+RUN test -n "${SERVICE_NAME}"
 
 ################################################################################
 # Chef stage
@@ -22,7 +26,9 @@ FROM chef AS planner
 
 WORKDIR /app
 
-COPY .. .
+COPY . .
+
+WORKDIR /app/${SERVICE_NAME}
 
 RUN cargo chef prepare --recipe-path recipe.json
 
@@ -32,14 +38,20 @@ RUN cargo chef prepare --recipe-path recipe.json
 ################################################################################
 FROM chef AS builder
 
-WORKDIR /app
+COPY common_api_lib /app/common_api_lib
 
-COPY --from=planner /app/recipe.json recipe.json
+WORKDIR /app/${SERVICE_NAME}
+
+COPY --from=planner /app/${SERVICE_NAME}/recipe.json recipe.json
 
 # Build dependencies. This is the caching Docker layer
 RUN cargo chef cook --release --recipe-path recipe.json
 
-COPY .. .
+WORKDIR /app
+
+COPY . .
+
+WORKDIR /app/${SERVICE_NAME}
 
 # Run tests (If enabled)
 ARG RUN_TESTS=false
@@ -76,12 +88,17 @@ RUN adduser \
 
 USER ${USER}:${USER}
 
-WORKDIR /app
+ARG SERVICE_NAME
 
-COPY --from=builder --chown=${USER}:${USER} /app/target/release/test_api /usr/local/bin
+# check that SERVICE_NAME is set
+RUN test -n "${SERVICE_NAME}"
 
-ENV CARGO_MANIFEST_DIR=/app
+WORKDIR /app/${SERVICE_NAME}
+
+COPY --from=builder --chown=${USER}:${USER} /app/${SERVICE_NAME}/target/release/${SERVICE_NAME} /usr/local/bin/service_api
+
+ENV CARGO_MANIFEST_DIR=/app/${SERVICE_NAME}
 
 EXPOSE 3000
 
-ENTRYPOINT ["test_api"]
+ENTRYPOINT [ "service_api" ]
