--- a/common_api_lib/Cargo.toml
+++ b/common_api_lib/Cargo.toml
@@ -22,3 +22,7 @@ tower-http = { version = "0.4.4", features = [
 dotenvy = "0.15"
 tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+diesel = { version = "2", features = ["chrono"] }
+diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
+bb8 = "0.8"
+chrono = "0.4.31"
