Add frontend service and update dataProvider URL

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,49 @@ version: '3'
 name: video_processing_project
 
 services:
+  # run our frontend in dev mode with hot module reloading for vite
+  frontend:
+    image: node:18-alpine
+    command: sh -c "npm install && npm run dev"
+    working_dir: /app
+    restart: always
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - VITE_API_URL=http://localhost:3000
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5173/"]
+      interval: 60s
+      timeout: 30s
+      retries: 5
+
+  crud_api:
+    build:
+      context: .
+      dockerfile: Dockerfile.rust
+      args:
+        - SERVICE_NAME=crud_api
+    restart: always
+    ports:
+      - "3000:3000"
+    depends_on:
+      - db
+      - redis
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/video_processing_project
+      - HOST=0.0.0.0
+      - PORT=3000
+      - RUST_LOG=debug
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   db:
     image: postgres
     restart: always
