--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -15,4 +15,4 @@ tracing = { version = "0.1.40" }
 diesel = { version = "2.1.4", features = ["chrono", "uuid"] }
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 chrono = "0.4.31"
-uuid = "1.6.1"
+uuid = { version = "1.6.1", features = ["serde"] }
