--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -54,6 +54,9 @@ WORKDIR /app
 
 COPY . .
 
+# delete top level Cargo.toml
+RUN rm -f Cargo.toml && rm -f Cargo.lock
+
 WORKDIR /app/${SERVICE_NAME}
 
 # Run tests (If enabled)
