--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -16,3 +16,4 @@ diesel = { version = "2.1.4", features = ["chrono", "uuid"] }
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 chrono = "0.4.31"
 uuid = { version = "1.6.1", features = ["serde"] }
+iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
