Set up nginx + stream_ingestion_api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
   "crud_api",
   #"media_archive_api",
   #"silence_detection_api",
-  #"stream_ingestion_api",
+  "stream_ingestion_api",
   #"task_api",
   #"transcription_api",
 ]
