Add ffmpeg package, add stream ingestion API endpoint

--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,7 @@ http {
 
         location /api/stream_ingestion {
             proxy_pass http://stream_ingestion_api:3000;
-            rewrite ^/api(.*)$ $1 break;
+            rewrite ^/api/stream_ingestion(.*)$ $1 break;
         }
 
         # The frontend SPA application is served on the root path.
