--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -77,6 +77,7 @@ RUN apt-get update \
   ca-certificates \
   libssl-dev \
   pkg-config \
+  ffmpeg \
   && rm -rf /var/lib/apt/lists/*
 
 # Create a non-root user to run the app
