--- a/stream_ingestion_api/Cargo.toml
+++ b/stream_ingestion_api/Cargo.toml
@@ -9,3 +9,8 @@ common_api_lib = { path = "../common_api_lib" }
 dotenvy = { version = "0.15.7" }
 axum = "0.6.20"
 tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.68"
+chrono = { version = "0.4.31", features = ["serde"] }
+meowhash = "0.3.0"
+tracing = { version = "0.1.40" }
