--- a/stream_ingestion_api/Cargo.toml
+++ b/stream_ingestion_api/Cargo.toml
@@ -11,5 +11,6 @@ axum = "0.6.20"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
+iso8601 = "0.6.1"
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
