--- a/nginx.conf
+++ b/nginx.conf
@@ -42,9 +42,9 @@ http {
         # TODO enable this once we have a valid certificate
         #return 301 https://$host$request_uri;
 
-        #location /api/chat {
-        #    proxy_pass http://ai_api:3000;
-        #}
+        location /api/chat {
+            proxy_pass http://ai_api:3000;
+        }
         location /api/records {
             proxy_pass http://crud_api:3000;
             rewrite ^/api(.*)$ $1 break;
