Add CORS allowed origins configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,12 @@
 version: "3"
 name: video_processing_project
 
+x-backend-variables: &backend-variables
+  HOST: 0.0.0.0
+  PORT: 3000
+  RUST_LOG: debug
+  CORS_ALLOWED_ORIGINS: http://localhost:8080
+
 services:
   proxy:
     image: nginx:1.25.1-alpine
@@ -24,9 +30,9 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - NODE_ENV=development
+      NODE_ENV: development
       # From end user perspective
-      - VITE_API_URL=http://localhost:8080/api
+      VITE_API_URL: http://localhost:8080/api
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/"]
       interval: 60s
@@ -43,10 +49,9 @@ services:
     volumes:
       - ./openai_key.txt:/openai_key
     environment:
-      - HOST=0.0.0.0
-      - PORT=3000
-      - RUST_LOG=debug
-      - OPENAI_KEY_PATH=/openai_key
+      OPENAI_KEY_PATH: /openai_key
+      <<: *backend-variables
+
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
@@ -63,10 +68,8 @@ services:
     depends_on:
       - db
     environment:
-      - DATABASE_URL=postgres://postgres:postgres@db:5432/video_processing_project
-      - HOST=0.0.0.0
-      - PORT=3000
-      - RUST_LOG=debug
+      DATABASE_URL: postgres://postgres:postgres@db:5432/video_processing_project
+      <<: *backend-variables
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
@@ -81,10 +84,8 @@ services:
         - SERVICE_NAME=stream_ingestion_api
     restart: always
     environment:
-      - HOST=0.0.0.0
-      - PORT=3000
-      - RUST_LOG=debug
-      - VIDEO_STORAGE_PATH=/obs
+      VIDEO_STORAGE_PATH: /obs
+      <<: *backend-variables
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 30s
