--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
   #"audio_extraction_api",
   "crud_api",
   #"media_archive_api",
-  #"silence_detection_api",
+  "silence_detection_api",
   "stream_ingestion_api",
   #"task_api",
   #"transcription_api",
