--- a/nginx.conf
+++ b/nginx.conf
@@ -55,6 +55,11 @@ http {
             rewrite ^/api/stream_ingestion(.*)$ $1 break;
         }
 
+        location /api/silence_detection {
+            proxy_pass http://silence_detection_api:3000;
+            rewrite ^/api/silence_detection(.*)$ $1 break;
+        }
+
         # The frontend SPA application is served on the root path.
         location / {
             proxy_pass http://frontend:3000;
