--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,10 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - frontend
+      - ai_api
       - crud_api
       - stream_ingestion_api
+      - silence_detection_api
 
   # run our frontend in dev mode with hot module reloading for vite
   frontend:
@@ -82,6 +84,24 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=stream_ingestion_api
+    restart: always
+    environment:
+      VIDEO_STORAGE_PATH: /obs
+      <<: *backend-variables
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - obs:/obs
+
+  silence_detection_api:
+    build:
+      context: .
+      dockerfile: Dockerfile.rust
+      args:
+        - SERVICE_NAME=silence_detection_api
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
