--- a/silence_detection_api/Cargo.toml
+++ b/silence_detection_api/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name = "stream_ingestion_api"
+name = "silence_detection_api"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,3 +14,4 @@ serde_json = "1.0.68"
 iso8601 = { version = "0.6.1", features = ["serde"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
+regex = "1.10.2"
