--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ name: video_processing_project
 x-backend-variables: &backend-variables
   HOST: 0.0.0.0
   PORT: 3000
-  RUST_LOG: debug
+  RUST_LOG: trace
+  RUST_BACKTRACE: 1
   CORS_ALLOWED_ORIGINS: http://localhost:8080
 
 services:
@@ -105,6 +106,8 @@ services:
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
+      NOISE: 0.004
+      DURATION: 2.0
       <<: *backend-variables
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
