--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,12 @@ http {
         location /api/chat {
             proxy_pass http://ai_api:3000;
         }
+
+        location ^~ /api/records/tasks {
+            proxy_pass http://task_api:3000;
+            rewrite ^/api/records(.*)$ $1 break;
+        }
+
         location /api/records {
             proxy_pass http://crud_api:3000;
             rewrite ^/api(.*)$ $1 break;
