--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -78,11 +78,17 @@ RUN apt-get update \
   libssl-dev \
   pkg-config \
   ffmpeg \
+  python3 \
+  python3-pip \
   && rm -rf /var/lib/apt/lists/*
+
+# Install openai whisper
+RUN pip3 install --break-system-packages openai-whisper
 
 # Create a non-root user to run the app
 ARG USER=user
 ARG UID=10001
+
 
 RUN adduser \
   --disabled-password \
@@ -92,6 +98,9 @@ RUN adduser \
   --no-create-home \
   --uid "${UID}" \
   "${USER}"
+
+RUN mkdir /model
+RUN chown ${USER}:${USER} /model
 
 USER ${USER}:${USER}
 
