--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -117,6 +117,33 @@ services:
     volumes:
       - obs:/obs
 
+  transcription_api:
+    build:
+      context: .
+      dockerfile: Dockerfile.rust
+      args:
+        - SERVICE_NAME=transcription_api
+    restart: always
+    environment:
+      VIDEO_STORAGE_PATH: /obs
+      MODEL_PATH: /model
+      <<: *backend-variables
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - obs:/obs
+      - model:/model
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+
   task_api:
     build:
       context: .
@@ -180,5 +207,6 @@ services:
 volumes:
   obs:
   audio:
+  model:
   postgres_data:
   redis_data:
