--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,8 @@ http {
     sendfile on;
     tcp_nopush on;
 
+    proxy_read_timeout 300; proxy_connect_timeout 300; proxy_send_timeout 300;
+
     server {
         listen 80;
         listen [::]:80;
@@ -64,6 +66,11 @@ http {
         location /api/silence_detection {
             proxy_pass http://silence_detection_api:3000;
             rewrite ^/api/silence_detection(.*)$ $1 break;
+        }
+
+        location /api/transcription {
+            proxy_pass http://transcription_api:3000;
+            rewrite ^/api/transcription(.*)$ $1 break;
         }
 
         # The frontend SPA application is served on the root path.
