--- a/transcription_api/Cargo.toml
+++ b/transcription_api/Cargo.toml
@@ -15,3 +15,5 @@ iso8601 = { version = "0.6.1", features = ["serde"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
 regex = "1.10.2"
+tempfile = "3.9.0"
+reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
