--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -128,6 +128,7 @@ services:
       VIDEO_STORAGE_PATH: /obs
       MODEL_PATH: /model
       TASK_API_URL: http://task_api:3000/tasks
+      TASK_API_EXTERNAL_URL: http://localhost:8080/api/records/tasks
       THIS_API_BASE_URL: http://transcription_api:3000
       <<: *backend-variables
     healthcheck:
