--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "serve": "vite preview",
     "type-check": "tsc --noEmit",
     "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "test": "jest"
   },
   "dependencies": {
     "ra-data-simple-rest": "^4.16.0",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^18.16.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
   }
