--- a/nginx.conf
+++ b/nginx.conf
@@ -76,7 +76,9 @@ http {
         # The frontend SPA application is served on the root path.
         location / {
             proxy_pass http://frontend:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
-
 }
