Update react-admin and add MUI dependency

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "ra-data-simple-rest": "^4.16.0",
     "react": "^18.2.0",
-    "react-admin": "^4.14.0",
+    "react-admin": "^4.16.12",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.1",
+    "@mui/material": "^5.0.2",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
