--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  frontend_build:
     defaults:
       run:
         working-directory: frontend
