--- a/nginx.conf
+++ b/nginx.conf
@@ -73,6 +73,11 @@ http {
             rewrite ^/api/transcription(.*)$ $1 break;
         }
 
+        location /api/twitch {
+            proxy_pass http://twitch_api:3000;
+            rewrite ^/api/twitch(.*)$ $1 break;
+        }
+
         # The frontend SPA application is served on the root path.
         location / {
             proxy_pass http://frontend:3000;
