--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,12 @@ http {
             rewrite ^/api/records(.*)$ $1 break;
         }
 
+
+        location ^~ /api/records/twitchStreams {
+            proxy_pass http://twitch_api:3000;
+            rewrite ^/api/records/twitchStreams(.*)$ /videos$1 break;
+        }
+
         location /api/records {
             proxy_pass http://crud_api:3000;
             rewrite ^/api(.*)$ $1 break;
@@ -77,6 +83,7 @@ http {
             proxy_pass http://twitch_api:3000;
             rewrite ^/api/twitch(.*)$ $1 break;
         }
+
 
         # The frontend SPA application is served on the root path.
         location / {
