Twitch data pulling (#16)
* Update dependencies versions in Cargo.toml files

* Add Twitch API and Twitch login functionality

Starts #15

* Add TWITCH_USER_ID environment variable to backend service

* Add proxy configuration for Twitch API

* Add stream fields for import in CRUD API

* Add create_bulk module and struct for handling bulk stream creation

* Refactor Twitch login button and update field names in stream list

* Add stream_id, stream_platform, duration, and stream_date fields to Stream model

* Fix access token retrieval and handle errors

* Refactor handleImport function in List.tsx

* Update DurationInput component props

* Fix duration calculation in StreamSilenceDetectionInput

* Refactor Twitch API main.rs file

* Refactor stream list components and import ThumbnailField

* Add ThumbnailField component

* Update thumbnail input in StreamEdit component

* Update thumbnail URL input field to use fullWidth prop

* Add stream_date field to create_list_handler

* Refactor structs.rs and utils.rs to include additional fields and functions

* Add search functionality and clone button to stream list

* Update Create.tsx to include required defaultValue for DurationInput

---------

Co-authored-by: saebyn <saebynx@gmail.com>

--- a/nginx.conf
+++ b/nginx.conf
@@ -53,6 +53,12 @@ http {
             rewrite ^/api/records(.*)$ $1 break;
         }
 
+
+        location ^~ /api/records/twitchStreams {
+            proxy_pass http://twitch_api:3000;
+            rewrite ^/api/records/twitchStreams(.*)$ /videos$1 break;
+        }
+
         location /api/records {
             proxy_pass http://crud_api:3000;
             rewrite ^/api(.*)$ $1 break;
@@ -72,6 +78,12 @@ http {
             proxy_pass http://transcription_api:3000;
             rewrite ^/api/transcription(.*)$ $1 break;
         }
+
+        location /api/twitch {
+            proxy_pass http://twitch_api:3000;
+            rewrite ^/api/twitch(.*)$ $1 break;
+        }
+
 
         # The frontend SPA application is served on the root path.
         location / {
