--- a/twitch_api/Cargo.toml
+++ b/twitch_api/Cargo.toml
@@ -1,6 +1,6 @@
 
 [package]
-name = "stream_ingestion_api"
+name = "twitch_api"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,3 +14,11 @@ serde_json = "1.0.68"
 iso8601 = { version = "0.6.1", features = ["serde"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
+regex = "1.10.2"
+redis = { version = "0.25.2", features = ["aio", "json", "tokio-comp"] }
+reqwest = { version = "0.12.2", features = [
+  "json",
+  "rustls-tls",
+  "trust-dns",
+  "gzip",
+], default-features = false }
