--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.18",
-    "@mui/material": "^5.0.2",
+    "@mui/material": "5.15.14",
+    "@mui/icons-material": "5.15.12",
+    "@mui/x-date-pickers": "7.1.0",
     "@storybook/addon-essentials": "^8.0.0",
     "@storybook/addon-interactions": "^8.0.0",
     "@storybook/addon-links": "^8.0.0",
@@ -35,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.1",
+    "date-fns": "2.30.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
@@ -42,7 +45,6 @@
     "eslint-plugin-storybook": "^0.8.0",
     "prettier": "^2.8.8",
     "storybook": "^8.0.0",
-    "ts-jest": "^29.1.2",
     "typescript": "^5.1.6",
     "vite": "^4.3.9",
     "vitest": "^1.4.0"
