Add youtube_upload_api dependency and render_uri field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ members = [
   "stream_ingestion_api",
   "task_api",
   "task_worker",
-  "transcription_api", "twitch_api",
+  "transcription_api", "twitch_api", "youtube_upload_api",
 ]
