--- a/nginx.conf
+++ b/nginx.conf
@@ -84,6 +84,10 @@ http {
             rewrite ^/api/twitch(.*)$ $1 break;
         }
 
+        location /api/youtube {
+            proxy_pass http://youtube_api:3000;
+            rewrite ^/api/youtube(.*)$ $1 break;
+        }
 
         # The frontend SPA application is served on the root path.
         location / {
