--- a/common_api_lib/Cargo.toml
+++ b/common_api_lib/Cargo.toml
@@ -31,3 +31,9 @@ diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 bb8 = "0.8"
 chrono = "0.4.31"
 iso8601 = { version = "0.6.1", features = ["serde"] }
+reqwest = { version = "0.12.2", features = [
+  "json",
+  "rustls-tls",
+  "trust-dns",
+  "gzip",
+], default-features = false }
