--- a/youtube_upload_api/Cargo.toml
+++ b/youtube_upload_api/Cargo.toml
@@ -23,4 +23,5 @@ reqwest = { version = "0.12.2", features = [
   "rustls-tls",
   "trust-dns",
   "gzip",
+  "stream",
 ], default-features = false }
