Add filters and bulk scan for clips button in stream list

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -182,6 +182,9 @@ services:
       <<: *backend-variables
       REDIS_URL: redis://redis:6379
       QUEUE_NAME: task_queue
+    deploy:
+      mode: replicated
+      replicas: 2
 
   twitch_api:
     build:
