Add redact crate with serde feature to api wrapper services. Fixes #39

--- a/youtube_upload_api/Cargo.toml
+++ b/youtube_upload_api/Cargo.toml
@@ -25,3 +25,4 @@ reqwest = { version = "0.12.2", features = [
   "gzip",
   "stream",
 ], default-features = false }
+redact = { version = "0.1.9", features = ["serde"] }
