--- a/twitch_api/Cargo.toml
+++ b/twitch_api/Cargo.toml
@@ -22,3 +22,4 @@ reqwest = { version = "0.12.2", features = [
   "trust-dns",
   "gzip",
 ], default-features = false }
+redact = { version = "0.1.9", features = ["serde"] }
