--- a/task_worker/Cargo.toml
+++ b/task_worker/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 dotenvy = { version = "0.15.7" }
 tokio = { version = "1.0", features = ["full"] }
 tracing = { version = "0.1.40" }
-redis = { version = "0.24.0", features = ["aio", "json", "tokio-comp"] }
+redis = { version = "0.25.3", features = ["aio", "json", "tokio-comp"] }
 reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+chrono = "0.4.37"
