--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ x-backend-variables: &backend-variables
   RUST_LOG: trace
   RUST_BACKTRACE: 1
   CORS_ALLOWED_ORIGINS: http://localhost:8080
+  TASK_API_URL: http://task_api:3000/tasks
+  TASK_API_EXTERNAL_URL: http://localhost:8080/api/records/tasks
 
 services:
   proxy:
@@ -25,6 +27,7 @@ services:
       - transcription_api
       - task_api
       - twitch_api
+      - youtube_api
 
   # run our frontend in dev mode with hot module reloading for vite
   frontend:
@@ -91,6 +94,7 @@ services:
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
+      RENDERED_EPISODE_STORAGE_PATH: /renders
       <<: *backend-variables
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
@@ -99,6 +103,7 @@ services:
       retries: 5
     volumes:
       - obs:/obs
+      - renders:/renders
 
   silence_detection_api:
     build:
@@ -111,8 +116,6 @@ services:
       VIDEO_STORAGE_PATH: /obs
       NOISE: 0.004
       DURATION: 2.0
-      TASK_API_URL: http://task_api:3000/tasks
-      TASK_API_EXTERNAL_URL: http://localhost:8080/api/records/tasks
       THIS_API_BASE_URL: http://silence_detection_api:3000
       <<: *backend-variables
     healthcheck:
@@ -133,8 +136,6 @@ services:
     environment:
       VIDEO_STORAGE_PATH: /obs
       MODEL_PATH: /model
-      TASK_API_URL: http://task_api:3000/tasks
-      TASK_API_EXTERNAL_URL: http://localhost:8080/api/records/tasks
       THIS_API_BASE_URL: http://transcription_api:3000
       <<: *backend-variables
     healthcheck:
@@ -204,6 +205,32 @@ services:
       timeout: 10s
       retries: 5
 
+  youtube_api:
+    build:
+      context: .
+      dockerfile: Dockerfile.rust
+      args:
+        - SERVICE_NAME=youtube_upload_api
+    restart: always
+    environment:
+      <<: *backend-variables
+      YOUTUBE_AUTH_URI: ${YOUTUBE_AUTH_URI}
+      YOUTUBE_TOKEN_URI: ${YOUTUBE_TOKEN_URI}
+      YOUTUBE_CLIENT_ID: ${YOUTUBE_CLIENT_ID}
+      YOUTUBE_CLIENT_SECRET_PATH: /youtube_client_secret
+      THIS_API_BASE_URL: http://youtube_api:3000
+      REDIRECT_URL: http://localhost:8080/youtube/callback
+      REDIS_URL: redis://redis:6379
+      RENDER_STORAGE_PATH: /renders
+    volumes:
+      - ./youtube_key.txt:/youtube_client_secret
+      - renders:/renders
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   db:
     image: postgres:15-alpine
     restart: always
@@ -237,6 +264,7 @@ services:
 
 volumes:
   obs:
+  renders:
   audio:
   model:
   postgres_data:
