--- a/youtube_upload_api/Cargo.toml
+++ b/youtube_upload_api/Cargo.toml
@@ -1,10 +1,12 @@
-
 [package]
-name = "silence_detection_api"
+name = "youtube_upload_api"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
+url = "2.5.0"
 common_api_lib = { path = "../common_api_lib" }
 dotenvy = { version = "0.15.7" }
 axum = "0.7.5"
@@ -15,9 +17,12 @@ iso8601 = { version = "0.6.1", features = ["serde"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
 regex = "1.10.2"
+redis = { version = "0.25.2", features = ["aio", "json", "tokio-comp"] }
 reqwest = { version = "0.12.2", features = [
   "json",
   "rustls-tls",
   "trust-dns",
   "gzip",
+  "stream",
 ], default-features = false }
+redact = { version = "0.1.9", features = ["serde"] }
