add next/previous buttons and keyboard shortcuts to edit views, don't redirect to list after saving Fixes #42

--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -39,6 +39,7 @@ RUN cargo chef prepare --recipe-path recipe.json
 FROM chef AS builder
 
 COPY common_api_lib /app/common_api_lib
+COPY task_worker /app/task_worker
 
 WORKDIR /app/${SERVICE_NAME}
 
