Add curl to Dockerfile.rust and docker-compose.yaml for healthchecks

--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -73,6 +73,7 @@ FROM debian:bookworm-slim AS runtime
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
   ca-certificates \
+  curl \
   libssl-dev \
   pkg-config \
   ffmpeg \
