--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,12 @@ services:
       - "8080:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    healthcheck:
+      # nginx:1.25.1-alpine does not have curl installed
+      test: ["CMD", "wget", "-q", "--spider", "--tries=1", "http://localhost:80"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     depends_on:
       - frontend
       - ai_api
@@ -43,7 +49,8 @@ services:
       # From end user perspective
       VITE_API_URL: http://localhost:8080/api
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/"]
+      # node:18-alpine does not have curl installed
+      test: ["CMD", "wget", "-q", "--spider", "--tries=1", "http://localhost:3000"]
       interval: 60s
       timeout: 30s
       retries: 5
