--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -6,8 +6,10 @@ name: Frontend Node.js CI
 on:
   push:
     branches: [ "main" ]
+    paths: ["frontend/**",".github/workflows/**"]
   pull_request:
     branches: [ "main" ]
+    paths: ["frontend/**",".github/workflows/**"]
 
 jobs:
   frontend_build:
